--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon1.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
-      name="Jonas Portfolio"
+      name="Jonas Lundholm"
       content="Portfolio content"
     />
     <meta property="og:title" content="Jonas Lundholm Portfolio" />
@@ -15,7 +15,7 @@
     <meta name="description" content="/icons/desc.png" property="og:image">
     <meta name="keywords" content="Jonas, PortFolio, MasterPortfolio, Jonas's Portfolio" />
     <meta name="author" content="Jonas" />
-    <meta name="application-name" content="Jonas PortFolio" />
+    <meta name="application-name" content="Jonas Lundholm" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/icons/apple-icon-60x60.png">
@@ -77,7 +77,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Jonas Portfolio</title>
+    <title>Jonas Lundholm</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
